# blockchain

./: .dockerignore  .gitignore  .travis.yml  Dockerfile-build  Dockerfile-run  README.md  blockchain-soapui-project.xml  docker-compose.yml  hie.yaml  stack.yaml
blockchain-node/: README.md  blockchain-node.cabal
blockchain-node/app/: Main.hs
blockchain-node/src/: Blockchain.hs  BlockchainConfig.hs  BlockchainWeb.hs  Logger.hs  NetworkUtil.hs  RestUtil.hs
blockchain-node/src/Blockchain/: Config.hs  Core.hs  RestApi.hs  Service.hs
blockchain-node/src/Blockchain/Node/: Account.hs  Config.hs  Core.hs  Hash.hs  MemPool.hs  NodesNetwork.hs  RestApi.hs  Service.hs  Signature.hs  Transaction.hs
blockchain-node/src/Blockchain/Node/RestApi/: Client.hs  Server.hs
blockchain-node/src/Blockchain/Node/Service/: Server.hs
blockchain-node/src/Blockchain/RestApi/: Client.hs  Server.hs
blockchain-node/src/Blockchain/Service/: Server.hs
blockchain-node/test/: Spec.hs
blockchain-node/test/Blockchain/Node/: AccountSpec.hs  HashSpec.hs  SignatureSpec.hs
blockchain-node/test/Blockchain/Node/Service/: ServerSpec.hs
blockchain-ui/: README.md  blockchain-ui.cabal
blockchain-ui-fe/: .angular-cli.json  package-lock.json  package.json  proxy.config.json
blockchain-ui-fe/src/: index.html  styles.css
blockchain-ui-fe/src/app/: Account.ts  Node.ts  StatusMessage.ts  Transaction.ts  account.service.ts  app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  message.service.ts  node.service.ts  not-found.component.ts  transaction.service.ts  util.ts
blockchain-ui-fe/src/app/account-detail/: account-detail.component.css  account-detail.component.html  account-detail.component.ts
blockchain-ui-fe/src/app/accounts/: accounts.component.html  accounts.component.ts
blockchain-ui-fe/src/app/nodes/: nodes.component.html  nodes.component.ts
blockchain-ui-fe/src/app/transactions/: transactions.component.html  transactions.component.ts
blockchain-ui/app/: Main.hs
blockchain-ui/src/Blockchain/UI/: Config.hs  Core.hs  RestApi.hs
blockchain-ui/src/Blockchain/UI/RestApi/: Server.hs
blockchain-ui/src/Blockchain/UI/Service/: Server.hs
node/: node.cabal
node/src/: Blockchain.hs
node/test/: Spec.hs
