name:                blockchain-ui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/carbolymer/blockchain#blockchain
license:             BSD3
license-file:        LICENSE
author:              carbolymer
maintainer:          example@example.com
copyright:           2017 carbolymer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blockchain.UI.Config
                     , Blockchain.UI.Core
                     , Blockchain.UI.RestApi
                     , Blockchain.UI.RestApi.Server
                     , Blockchain.UI.Service.Server
  build-depends:       base >= 4.7 && < 5
                     , blockchain-node
                     , bytestring >= 0.10.8
                     , aeson >= 1.2.2
                     , containers >= 0.5.7
                     , hostname == 1.0
                     , http-types >= 0.9
                     , servant >= 0.12
                     , servant-client-core >= 0.12
                     , servant-client >= 0.12
                     , servant-server >= 0.12
                     , text >= 1.2.2
                     , wai >= 3.2.1
                     , wai-app-static >= 3.1.6
                     , warp >= 3.2.13
  default-language:    Haskell2010
  ghc-options:         -O2 -optc-O2 -Wall -Wno-name-shadowing -Wno-orphans
  default-extensions:  NoMonomorphismRestriction

executable blockchain-ui-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -optc-O2 -Wall
  build-depends:       base
                     , blockchain-ui
                     , text >= 1.2.2
  default-language:    Haskell2010

test-suite blockchain-ui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockchain-ui
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carolymer/blockchain
